--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -12,7 +12,13 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.453.0",
     "pinia": "^2.2.4",
+    "radix-vue": "^1.9.7",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -27,7 +33,6 @@
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.29.0",
     "npm-run-all2": "^7.0.1",
-    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
