--- a/src/asciidraw/components.json
+++ b/src/asciidraw/components.json
@@ -6,8 +6,8 @@
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "src/assets/index.css",
-    "baseColor": "neutral",
-    "cssVariables": false,
+    "baseColor": "slate",
+    "cssVariables": true,
     "prefix": ""
   },
   "framework": "vite",
