--- a/src/asciidraw/tsconfig.json
+++ b/src/asciidraw/tsconfig.json
@@ -9,9 +9,10 @@
     }
   ],
   "compilerOptions": {
+    "types": ["@intlify/unplugin-vue-i18n/messages"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    },
+    }
   },
 }
