--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.461.0",
+    "mitt": "^3.0.1",
     "pinia": "^2.2.6",
     "radix-vue": "^1.9.10",
     "tailwind-merge": "^2.5.5",
