--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -13,31 +13,31 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^6.0.0",
-    "@vueuse/core": "^11.3.0",
+    "@vueuse/core": "^12.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-vue-next": "^0.461.0",
-    "pinia": "^2.2.6",
+    "lucide-vue-next": "^0.465.0",
+    "pinia": "^2.3.0",
     "radix-vue": "^1.9.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
-    "vue-i18n": "^10.0.4",
+    "vue-i18n": "^10.0.5",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^22.10.0",
-    "@vitejs/plugin-vue": "^5.2.0",
+    "@types/node": "^22.10.1",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-typescript": "^14.1.4",
-    "@vue/tsconfig": "^0.6.0",
+    "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-plugin-vue": "^9.31.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-vue": "^9.32.0",
     "npm-run-all2": "^7.0.1",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.11",
+    "tailwindcss": "^3.4.16",
+    "typescript": "~5.6.3",
+    "vite": "^6.0.2",
     "vue-tsc": "^2.1.10"
   }
 }
