--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -34,9 +34,11 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.32.0",
+    "markdown-it-prism": "^2.3.0",
     "npm-run-all2": "^7.0.1",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.3",
+    "unplugin-vue-markdown": "^0.27.1",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
   }
