--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.32.0",
+    "markdown-it-anchor": "^9.2.0",
     "markdown-it-prism": "^2.3.0",
     "npm-run-all2": "^7.0.1",
     "tailwindcss": "^3.4.16",
