--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^6.0.1",
-    "@vueuse/core": "^12.0.0",
+    "@vueuse/core": "^12.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.468.0",
@@ -22,6 +22,7 @@
     "radix-vue": "^1.9.11",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.5",
     "vue-router": "^4.5.0"
