--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.473.0",
     "lz-string": "^1.5.0",
+    "markdown-it-github-alerts": "^0.3.0",
     "mitt": "^3.0.1",
     "radix-vue": "^1.9.12",
     "tailwind-merge": "^2.6.0",
