--- a/src/asciidraw/package.json
+++ b/src/asciidraw/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "^12.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-flag-icons": "^1.5.16",
     "lucide-vue-next": "^0.473.0",
     "lz-string": "^1.5.0",
     "markdown-it-github-alerts": "^0.3.0",
