--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -3,6 +3,7 @@ description: Suggest an idea to improve this project
 title: "[Feature]: "
 labels:
   - enhancement
+type: Feature
 
 body:
   - type: markdown
